--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 
 
 /* ==========================================================================
-   Author's custom styles
+   Author's AWESOME custom styles
    ========================================================================== */
+text-align: left;
 
 
 
